--- a/lab-09_1_mnist_softmax.ipynb
+++ b/lab-09_1_mnist_softmax.ipynb
@@ -90,13 +90,13 @@
      "data": {
       "text/plain": [
        "Parameter containing:\n",
-       "tensor([[ 0.1816, -0.3203,  0.7464,  ..., -1.1073, -0.9288,  0.0237],\n",
-       "        [-0.3739, -0.1353, -1.4771,  ..., -1.0704, -0.2870, -0.8190],\n",
-       "        [ 0.6629, -0.8928, -0.1996,  ..., -0.3233, -0.2469, -0.0439],\n",
+       "tensor([[-1.2901,  0.3930, -0.1891,  ..., -0.1626, -0.3275,  0.5608],\n",
+       "        [-1.6757, -0.2454,  0.9221,  ...,  0.9559,  0.6160, -0.4226],\n",
+       "        [ 0.2444,  1.4810, -2.0906,  ...,  0.1206,  1.0044, -0.3737],\n",
        "        ...,\n",
-       "        [-0.0205,  0.7921,  1.6696,  ...,  0.9601, -1.5459,  1.4929],\n",
-       "        [-0.5019, -1.0087,  0.7673,  ...,  1.3801, -0.5147,  2.4057],\n",
-       "        [-0.8006,  0.9329,  1.3498,  ..., -0.0187,  1.4246, -0.3995]],\n",
+       "        [ 0.6234,  1.8019, -2.7563,  ..., -0.5889, -0.5576,  0.7360],\n",
+       "        [-0.2871, -1.3313, -2.2248,  ...,  0.0309,  0.9180, -0.1482],\n",
+       "        [ 0.7678,  0.6624, -0.5362,  ...,  0.2338,  0.3688, -0.7182]],\n",
        "       device='cuda:0', requires_grad=True)"
       ]
      },
@@ -130,21 +130,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 0001 cost = 4.848181248\n",
-      "Epoch: 0002 cost = 1.464641452\n",
-      "Epoch: 0003 cost = 0.977406502\n",
-      "Epoch: 0004 cost = 0.790303528\n",
-      "Epoch: 0005 cost = 0.686833322\n",
-      "Epoch: 0006 cost = 0.618483305\n",
-      "Epoch: 0007 cost = 0.568978667\n",
-      "Epoch: 0008 cost = 0.531290889\n",
-      "Epoch: 0009 cost = 0.501056492\n",
-      "Epoch: 0010 cost = 0.476258427\n",
-      "Epoch: 0011 cost = 0.455025405\n",
-      "Epoch: 0012 cost = 0.437031567\n",
-      "Epoch: 0013 cost = 0.421489984\n",
-      "Epoch: 0014 cost = 0.408599794\n",
-      "Epoch: 0015 cost = 0.396514893\n",
+      "Epoch: 0001 cost = 5.656054974\n",
+      "Epoch: 0002 cost = 1.699803472\n",
+      "Epoch: 0003 cost = 1.121566176\n",
+      "Epoch: 0004 cost = 0.883357942\n",
+      "Epoch: 0005 cost = 0.750486851\n",
+      "Epoch: 0006 cost = 0.663246810\n",
+      "Epoch: 0007 cost = 0.601343870\n",
+      "Epoch: 0008 cost = 0.554267764\n",
+      "Epoch: 0009 cost = 0.518746793\n",
+      "Epoch: 0010 cost = 0.489619613\n",
+      "Epoch: 0011 cost = 0.465846598\n",
+      "Epoch: 0012 cost = 0.446371138\n",
+      "Epoch: 0013 cost = 0.429083288\n",
+      "Epoch: 0014 cost = 0.414352983\n",
+      "Epoch: 0015 cost = 0.401432723\n",
       "Learning finished\n"
      ]
     }
@@ -182,9 +182,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.8944000005722046\n",
+      "Accuracy: 0.8905999660491943\n",
       "Label:  8\n",
-      "Prediction:  8\n"
+      "Prediction:  3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/tk2637/.conda/envs/pytorch/lib/python3.6/site-packages/torchvision/datasets/mnist.py:58: UserWarning: test_data has been renamed data\n",
+      "  warnings.warn(\"test_data has been renamed data\")\n",
+      "/home/tk2637/.conda/envs/pytorch/lib/python3.6/site-packages/torchvision/datasets/mnist.py:48: UserWarning: test_labels has been renamed targets\n",
+      "  warnings.warn(\"test_labels has been renamed targets\")\n"
      ]
     }
    ],
@@ -208,6 +218,13 @@
     "    single_prediction = linear(X_single_data)\n",
     "    print('Prediction: ', torch.argmax(single_prediction, 1).item())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -226,9 +243,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
