--- a/lab-10_6_2_Advance-CNN(ResNet_cifar10).ipynb
+++ b/lab-10_6_2_Advance-CNN(ResNet_cifar10).ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,11 +27,171 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
+   "source": [
+    "#!pip install visdom"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting up a new session...\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/tk2637/.conda/envs/pytorch/lib/python3.6/site-packages/urllib3/connection.py\", line 157, in _new_conn\n",
+      "    (self._dns_host, self.port), self.timeout, **extra_kw\n",
+      "  File \"/home/tk2637/.conda/envs/pytorch/lib/python3.6/site-packages/urllib3/util/connection.py\", line 84, in create_connection\n",
+      "    raise err\n",
+      "  File \"/home/tk2637/.conda/envs/pytorch/lib/python3.6/site-packages/urllib3/util/connection.py\", line 74, in create_connection\n",
+      "    sock.connect(sa)\n",
+      "ConnectionRefusedError: [Errno 111] Connection refused\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/tk2637/.conda/envs/pytorch/lib/python3.6/site-packages/urllib3/connectionpool.py\", line 672, in urlopen\n",
+      "    chunked=chunked,\n",
+      "  File \"/home/tk2637/.conda/envs/pytorch/lib/python3.6/site-packages/urllib3/connectionpool.py\", line 387, in _make_request\n",
+      "    conn.request(method, url, **httplib_request_kw)\n",
+      "  File \"/home/tk2637/.conda/envs/pytorch/lib/python3.6/http/client.py\", line 1254, in request\n",
+      "    self._send_request(method, url, body, headers, encode_chunked)\n",
+      "  File \"/home/tk2637/.conda/envs/pytorch/lib/python3.6/http/client.py\", line 1300, in _send_request\n",
+      "    self.endheaders(body, encode_chunked=encode_chunked)\n",
+      "  File \"/home/tk2637/.conda/envs/pytorch/lib/python3.6/http/client.py\", line 1249, in endheaders\n",
+      "    self._send_output(message_body, encode_chunked=encode_chunked)\n",
+      "  File \"/home/tk2637/.conda/envs/pytorch/lib/python3.6/http/client.py\", line 1036, in _send_output\n",
+      "    self.send(msg)\n",
+      "  File \"/home/tk2637/.conda/envs/pytorch/lib/python3.6/http/client.py\", line 974, in send\n",
+      "    self.connect()\n",
+      "  File \"/home/tk2637/.conda/envs/pytorch/lib/python3.6/site-packages/urllib3/connection.py\", line 184, in connect\n",
+      "    conn = self._new_conn()\n",
+      "  File \"/home/tk2637/.conda/envs/pytorch/lib/python3.6/site-packages/urllib3/connection.py\", line 169, in _new_conn\n",
+      "    self, \"Failed to establish a new connection: %s\" % e\n",
+      "urllib3.exceptions.NewConnectionError: <urllib3.connection.HTTPConnection object at 0x2b24f2ace278>: Failed to establish a new connection: [Errno 111] Connection refused\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/tk2637/.conda/envs/pytorch/lib/python3.6/site-packages/requests/adapters.py\", line 449, in send\n",
+      "    timeout=timeout\n",
+      "  File \"/home/tk2637/.conda/envs/pytorch/lib/python3.6/site-packages/urllib3/connectionpool.py\", line 720, in urlopen\n",
+      "    method, url, error=e, _pool=self, _stacktrace=sys.exc_info()[2]\n",
+      "  File \"/home/tk2637/.conda/envs/pytorch/lib/python3.6/site-packages/urllib3/util/retry.py\", line 436, in increment\n",
+      "    raise MaxRetryError(_pool, url, error or ResponseError(cause))\n",
+      "urllib3.exceptions.MaxRetryError: HTTPConnectionPool(host='localhost', port=8097): Max retries exceeded with url: /env/main (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x2b24f2ace278>: Failed to establish a new connection: [Errno 111] Connection refused',))\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/tk2637/.conda/envs/pytorch/lib/python3.6/site-packages/visdom/__init__.py\", line 711, in _send\n",
+      "    data=json.dumps(msg),\n",
+      "  File \"/home/tk2637/.conda/envs/pytorch/lib/python3.6/site-packages/visdom/__init__.py\", line 677, in _handle_post\n",
+      "    r = self.session.post(url, data=data)\n",
+      "  File \"/home/tk2637/.conda/envs/pytorch/lib/python3.6/site-packages/requests/sessions.py\", line 581, in post\n",
+      "    return self.request('POST', url, data=data, json=json, **kwargs)\n",
+      "  File \"/home/tk2637/.conda/envs/pytorch/lib/python3.6/site-packages/requests/sessions.py\", line 533, in request\n",
+      "    resp = self.send(prep, **send_kwargs)\n",
+      "  File \"/home/tk2637/.conda/envs/pytorch/lib/python3.6/site-packages/requests/sessions.py\", line 646, in send\n",
+      "    r = adapter.send(request, **kwargs)\n",
+      "  File \"/home/tk2637/.conda/envs/pytorch/lib/python3.6/site-packages/requests/adapters.py\", line 516, in send\n",
+      "    raise ConnectionError(e, request=request)\n",
+      "requests.exceptions.ConnectionError: HTTPConnectionPool(host='localhost', port=8097): Max retries exceeded with url: /env/main (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x2b24f2ace278>: Failed to establish a new connection: [Errno 111] Connection refused',))\n",
+      "[Errno 111] Connection refused\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exception in user code:\n",
+      "------------------------------------------------------------\n",
+      "Exception in user code:\n",
+      "------------------------------------------------------------\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/home/tk2637/.conda/envs/pytorch/lib/python3.6/site-packages/urllib3/connection.py\", line 157, in _new_conn\n",
+      "    (self._dns_host, self.port), self.timeout, **extra_kw\n",
+      "  File \"/home/tk2637/.conda/envs/pytorch/lib/python3.6/site-packages/urllib3/util/connection.py\", line 84, in create_connection\n",
+      "    raise err\n",
+      "  File \"/home/tk2637/.conda/envs/pytorch/lib/python3.6/site-packages/urllib3/util/connection.py\", line 74, in create_connection\n",
+      "    sock.connect(sa)\n",
+      "ConnectionRefusedError: [Errno 111] Connection refused\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/tk2637/.conda/envs/pytorch/lib/python3.6/site-packages/urllib3/connectionpool.py\", line 672, in urlopen\n",
+      "    chunked=chunked,\n",
+      "  File \"/home/tk2637/.conda/envs/pytorch/lib/python3.6/site-packages/urllib3/connectionpool.py\", line 387, in _make_request\n",
+      "    conn.request(method, url, **httplib_request_kw)\n",
+      "  File \"/home/tk2637/.conda/envs/pytorch/lib/python3.6/http/client.py\", line 1254, in request\n",
+      "    self._send_request(method, url, body, headers, encode_chunked)\n",
+      "  File \"/home/tk2637/.conda/envs/pytorch/lib/python3.6/http/client.py\", line 1300, in _send_request\n",
+      "    self.endheaders(body, encode_chunked=encode_chunked)\n",
+      "  File \"/home/tk2637/.conda/envs/pytorch/lib/python3.6/http/client.py\", line 1249, in endheaders\n",
+      "    self._send_output(message_body, encode_chunked=encode_chunked)\n",
+      "  File \"/home/tk2637/.conda/envs/pytorch/lib/python3.6/http/client.py\", line 1036, in _send_output\n",
+      "    self.send(msg)\n",
+      "  File \"/home/tk2637/.conda/envs/pytorch/lib/python3.6/http/client.py\", line 974, in send\n",
+      "    self.connect()\n",
+      "  File \"/home/tk2637/.conda/envs/pytorch/lib/python3.6/site-packages/urllib3/connection.py\", line 184, in connect\n",
+      "    conn = self._new_conn()\n",
+      "  File \"/home/tk2637/.conda/envs/pytorch/lib/python3.6/site-packages/urllib3/connection.py\", line 169, in _new_conn\n",
+      "    self, \"Failed to establish a new connection: %s\" % e\n",
+      "urllib3.exceptions.NewConnectionError: <urllib3.connection.HTTPConnection object at 0x2b24f2d70828>: Failed to establish a new connection: [Errno 111] Connection refused\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/tk2637/.conda/envs/pytorch/lib/python3.6/site-packages/requests/adapters.py\", line 449, in send\n",
+      "    timeout=timeout\n",
+      "  File \"/home/tk2637/.conda/envs/pytorch/lib/python3.6/site-packages/urllib3/connectionpool.py\", line 720, in urlopen\n",
+      "    method, url, error=e, _pool=self, _stacktrace=sys.exc_info()[2]\n",
+      "  File \"/home/tk2637/.conda/envs/pytorch/lib/python3.6/site-packages/urllib3/util/retry.py\", line 436, in increment\n",
+      "    raise MaxRetryError(_pool, url, error or ResponseError(cause))\n",
+      "urllib3.exceptions.MaxRetryError: HTTPConnectionPool(host='localhost', port=8097): Max retries exceeded with url: /close (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x2b24f2d70828>: Failed to establish a new connection: [Errno 111] Connection refused',))\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/tk2637/.conda/envs/pytorch/lib/python3.6/site-packages/visdom/__init__.py\", line 711, in _send\n",
+      "    data=json.dumps(msg),\n",
+      "  File \"/home/tk2637/.conda/envs/pytorch/lib/python3.6/site-packages/visdom/__init__.py\", line 677, in _handle_post\n",
+      "    r = self.session.post(url, data=data)\n",
+      "  File \"/home/tk2637/.conda/envs/pytorch/lib/python3.6/site-packages/requests/sessions.py\", line 581, in post\n",
+      "    return self.request('POST', url, data=data, json=json, **kwargs)\n",
+      "  File \"/home/tk2637/.conda/envs/pytorch/lib/python3.6/site-packages/requests/sessions.py\", line 533, in request\n",
+      "    resp = self.send(prep, **send_kwargs)\n",
+      "  File \"/home/tk2637/.conda/envs/pytorch/lib/python3.6/site-packages/requests/sessions.py\", line 646, in send\n",
+      "    r = adapter.send(request, **kwargs)\n",
+      "  File \"/home/tk2637/.conda/envs/pytorch/lib/python3.6/site-packages/requests/adapters.py\", line 516, in send\n",
+      "    raise ConnectionError(e, request=request)\n",
+      "requests.exceptions.ConnectionError: HTTPConnectionPool(host='localhost', port=8097): Max retries exceeded with url: /close (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x2b24f2d70828>: Failed to establish a new connection: [Errno 111] Connection refused',))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import visdom\n",
     "\n",
@@ -48,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,11 +245,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Files already downloaded and verified\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'CIFAR10' object has no attribute 'train_data'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-977fabf13e3e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mtrainset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorchvision\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdatasets\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCIFAR10\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mroot\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'./cifar10'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdownload\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtransform\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrainset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mtrain_data_mean\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrainset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'CIFAR10' object has no attribute 'train_data'"
+     ]
+    }
+   ],
    "source": [
     "transform = transforms.Compose([\n",
     "    transforms.ToTensor()\n",
@@ -275,9 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "a=torch.Tensor(1,3,32,32).to(device)\n",
@@ -449,9 +626,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
