--- a/lab-11_6_PackedSequence.ipynb
+++ b/lab-11_6_PackedSequence.ipynb
@@ -56,7 +56,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "char_set: ['<pad>', 'm', 'i', 'd', 'l', 'n', 'r', 't', 's', 'a', 'e', ' ', 'p', 'u', 'c', 'h', 'w', 'o', 'g']\n",
+      "char_set: ['<pad>', 'h', 'm', 't', ' ', 'c', 'n', 'r', 'e', 'i', 'o', 'w', 'd', 'g', 'a', 's', 'p', 'l', 'u']\n",
       "char_set length: 19\n"
      ]
     }
@@ -85,11 +85,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([15, 10,  4,  4, 17, 11, 16, 17,  6,  4,  3])\n",
-      "tensor([ 1,  2,  3,  5,  2, 18, 15,  7])\n",
-      "tensor([14,  9,  4, 14, 13,  4,  9,  7,  2, 17,  5])\n",
-      "tensor([12,  9,  7, 15])\n",
-      "tensor([ 8, 15, 17,  6,  7, 11, 14,  2,  6, 14, 13,  2,  7])\n"
+      "tensor([ 1,  8, 17, 17, 10,  4, 11, 10,  7, 17, 12])\n",
+      "tensor([ 2,  9, 12,  6,  9, 13,  1,  3])\n",
+      "tensor([ 5, 14, 17,  5, 18, 17, 14,  3,  9, 10,  6])\n",
+      "tensor([16, 14,  3,  1])\n",
+      "tensor([15,  1, 10,  7,  3,  4,  5,  9,  7,  5, 18,  9,  3])\n"
      ]
     }
    ],
@@ -177,11 +177,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[15, 10,  4,  4, 17, 11, 16, 17,  6,  4,  3,  0,  0],\n",
-      "        [ 1,  2,  3,  5,  2, 18, 15,  7,  0,  0,  0,  0,  0],\n",
-      "        [14,  9,  4, 14, 13,  4,  9,  7,  2, 17,  5,  0,  0],\n",
-      "        [12,  9,  7, 15,  0,  0,  0,  0,  0,  0,  0,  0,  0],\n",
-      "        [ 8, 15, 17,  6,  7, 11, 14,  2,  6, 14, 13,  2,  7]])\n",
+      "tensor([[ 1,  8, 17, 17, 10,  4, 11, 10,  7, 17, 12,  0,  0],\n",
+      "        [ 2,  9, 12,  6,  9, 13,  1,  3,  0,  0,  0,  0,  0],\n",
+      "        [ 5, 14, 17,  5, 18, 17, 14,  3,  9, 10,  6,  0,  0],\n",
+      "        [16, 14,  3,  1,  0,  0,  0,  0,  0,  0,  0,  0,  0],\n",
+      "        [15,  1, 10,  7,  3,  4,  5,  9,  7,  5, 18,  9,  3]])\n",
       "torch.Size([5, 13])\n"
      ]
     }
@@ -218,11 +218,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([ 8, 15, 17,  6,  7, 11, 14,  2,  6, 14, 13,  2,  7])\n",
-      "tensor([15, 10,  4,  4, 17, 11, 16, 17,  6,  4,  3])\n",
-      "tensor([14,  9,  4, 14, 13,  4,  9,  7,  2, 17,  5])\n",
-      "tensor([ 1,  2,  3,  5,  2, 18, 15,  7])\n",
-      "tensor([12,  9,  7, 15])\n"
+      "tensor([15,  1, 10,  7,  3,  4,  5,  9,  7,  5, 18,  9,  3])\n",
+      "tensor([ 1,  8, 17, 17, 10,  4, 11, 10,  7, 17, 12])\n",
+      "tensor([ 5, 14, 17,  5, 18, 17, 14,  3,  9, 10,  6])\n",
+      "tensor([ 2,  9, 12,  6,  9, 13,  1,  3])\n",
+      "tensor([16, 14,  3,  1])\n"
      ]
     }
    ],
@@ -252,9 +252,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PackedSequence(data=tensor([ 8, 15, 14,  1, 12, 15, 10,  9,  2,  9, 17,  4,  4,  3,  7,  6,  4, 14,\n",
-      "         5, 15,  7, 17, 13,  2, 11, 11,  4, 18, 14, 16,  9, 15,  2, 17,  7,  7,\n",
-      "         6,  6,  2, 14,  4, 17, 13,  3,  5,  2,  7]), batch_sizes=tensor([5, 5, 5, 5, 4, 4, 4, 4, 3, 3, 3, 1, 1]))\n"
+      "PackedSequence(data=tensor([15,  1,  5,  2, 16,  1,  8, 14,  9, 14, 10, 17, 17, 12,  3,  7, 17,  5,\n",
+      "         6,  1,  3, 10, 18,  9,  4,  4, 17, 13,  5, 11, 14,  1,  9, 10,  3,  3,\n",
+      "         7,  7,  9,  5, 17, 10, 18, 12,  6,  9,  3]), batch_sizes=tensor([5, 5, 5, 5, 4, 4, 4, 4, 3, 3, 3, 1, 1]), sorted_indices=None, unsorted_indices=None)\n"
      ]
     }
    ],
@@ -478,6 +478,13 @@
     "print(new_packed_sequence.data.shape)\n",
     "print(new_packed_sequence.batch_sizes)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -496,9 +503,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
